daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N16_insufficient_q_threshold/T0.hex
826f6461796c696768742e7072652e7636b20006015840ad8cca780b2c54c65013e958a923e87f5b32e0a3d38c4d433c60160c49f19f197834848bc4f6943f66dba6f80cc233c192188d631c7a65e6fd99ad1776dafcc202010301040105020600071838080109781a6461796c696768742d76362d666978747572652d706f6c6963790a5840832a4757a62ed88a59ee7eb32777de29041368cd5d6fdc53c564cce64c8cadb6c27ccb09b2d5b736324c42c452f99b8cd6a704313c809a3399667a04eaea37810b5840fad6aece4c710c29f224dca05fb08a06fa63dec289577da88101cffe0bc808f5ca2974c98f8139fe13d13dcb2cef9518d61d6d18858357789b5ea2c0860900d10cf60d584006e160e72f3d521d50d3ed069f6317dfebfd40bdc798e5eaa4b2902e0b414853e06b36fa48b966e865db0d6caec5a804a48d7963d6922f01438587a7b32db7120e584006e160e72f3d521d50d3ed069f6317dfebfd40bdc798e5eaa4b2902e0b414853e06b36fa48b966e865db0d6caec5a804a48d7963d6922f01438587a7b32db7120f584040272137b770ae6fd2b2882a144dff2de6c5db04c42980a8217235cf1003a54405f6a7d3544d95a503d3739d289d93bbc2fcfb4bb8325373e07f06a119daf8d510001101
